--- a/public/index.html
+++ b/public/index.html
@@ -89,39 +89,39 @@
   </div>
 
 <script>
-document.getElementById("feedbackForm").addEventListener("submit", async function(event) {
-  event.preventDefault();
+document.getElementById("feedbackForm").addEventListener("submit", async function (e) {
+  e.preventDefault();
 
-  const form = event.target;
   const formData = {
-    name: form.name.value,
-    email: form.email.value,
-    department: form.department.value,
-    category: form.category.value,
-    rating: parseInt(form.rating.value),
-    message: form.message.value
+    name: document.getElementById("name").value,
+    email: document.getElementById("email").value,
+    department: document.getElementById("department").value,
+    category: document.getElementById("category").value,
+    rating: document.getElementById("rating").value,
+    message: document.getElementById("message").value,
   };
 
   try {
-    const response = await fetch("http://localhost:3000/feedback", {
+    const response = await fetch("https://your-railway-app.up.railway.app/feedback", {
       method: "POST",
       headers: {
-        "Content-Type": "application/json"
+        "Content-Type": "application/json",
       },
-      body: JSON.stringify(formData)
+      body: JSON.stringify(formData),
     });
 
-    const result = await response.json();
     if (response.ok) {
       alert("Feedback submitted successfully!");
-      form.reset();
+      document.getElementById("feedbackForm").reset();
     } else {
-      alert("Error: " + result.message);
+      alert("Error submitting feedback.");
     }
   } catch (error) {
-    alert("Server error: " + error.message);
+    console.error("Submission failed:", error);
+    alert("Error: Could not connect to the server.");
   }
 });
+
 </script>
 
 </body>
