--- a/public/index.html
+++ b/public/index.html
@@ -89,39 +89,39 @@
   </div>
 
 <script>
-document.getElementById("feedbackForm").addEventListener("submit", async function (e) {
-  e.preventDefault();
+document.getElementById("feedbackForm").addEventListener("submit", async function(event) {
+  event.preventDefault();
 
+  const form = event.target;
   const formData = {
-    name: document.getElementById("name").value,
-    email: document.getElementById("email").value,
-    department: document.getElementById("department").value,
-    category: document.getElementById("category").value,
-    rating: document.getElementById("rating").value,
-    message: document.getElementById("message").value,
+    name: form.name.value,
+    email: form.email.value,
+    department: form.department.value,
+    category: form.category.value,
+    rating: parseInt(form.rating.value),
+    message: form.message.value
   };
 
   try {
-    const response = await fetch("https://your-railway-app.up.railway.app/feedback", {
+    const response = await fetch('https://cicd-production-5ef1.up.railway.app/register', {
       method: "POST",
       headers: {
-        "Content-Type": "application/json",
+        "Content-Type": "application/json"
       },
-      body: JSON.stringify(formData),
+      body: JSON.stringify(formData)
     });
 
+    const result = await response.json();
     if (response.ok) {
       alert("Feedback submitted successfully!");
-      document.getElementById("feedbackForm").reset();
+      form.reset();
     } else {
-      alert("Error submitting feedback.");
+      alert("Error: " + result.message);
     }
   } catch (error) {
-    console.error("Submission failed:", error);
-    alert("Error: Could not connect to the server.");
+    alert("Server error: " + error.message);
   }
 });
-
 </script>
 
 </body>
