Enable CORS for frontend

--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,7 @@ document.getElementById("feedbackForm").addEventListener("submit", async functio
   };
 
   try {
-    const response = await fetch('https://cicd-production-5ef1.up.railway.app/register', {
+    const response = await fetch('https://devoopfinalfeedback-production.up.railway.app/', {
       method: "POST",
       headers: {
         "Content-Type": "application/json"
