--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,7 @@ document.getElementById("feedbackForm").addEventListener("submit", async functio
   };
 
   try {
-    const response = await fetch('https://devoopfinalfeedback-production.up.railway.app/', {
+    const response = await fetch("http://localhost:3000/feedback", {
       method: "POST",
       headers: {
         "Content-Type": "application/json"
